--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 <!-- ------------------------------------------------------ -->
     <div class="container cover">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-lg-6 col-md-6 col-sm-12">
                 <p class="red">Are you ready to Learn?</p>
                 <h1>Learn With fun<br> on <span>any schedule</span></h1>
 
-                <p class="descrip">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit. Varius blandit facilisis quam netus.</p>
+                <p class="descrip">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
 
                 <button class="common-btn">Get Started</button>
 
             </div>
-            <div class="right-img col-6">
+            <div class="right-img col-12 col-lg-6 col-md-6 col-sm-12">
                 <img src="images/Photos/Illustration.png" alt="">
             </div>
         </div>
@@ -57,27 +57,27 @@
 <!-- --------------------------------------------------------------- -->
 
     <div class="container books-card">
-      <div class="d-flex flex-row mb-3 book-std">
+      <div class="row d-flex flex-row mb-3 book-std">
 
-        <div class="p-2">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 hovers">
           <img src="images/ICON/book.png" alt="">
           <h6>1500+ Topic</h6>
           <small>Learn Anythings</small>
         </div>
         
-        <div class="p-2">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 hovers">
           <img src="images/ICON/Student.png" alt="">
           <h6>1800+ Students</h6>
           <small>Learn Anythings</small>
         </div>
 
-        <div class="p-2">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 hovers">
           <img src="images/ICON/Test.png" alt="">
           <h6>9K+ Test Token</h6>
           <small>Learn Anythings</small>
         </div>
 
-        <div class="p-2">
+        <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 hovers">
           <img src="images/ICON/Students.png" alt="">
           <h6>2000+ Students</h6>
           <small>Learn Anythings</small>
@@ -92,7 +92,7 @@
       <h2 class="text-center">Online Courses</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         
-        <div class="col courses-col">
+        <div class="col  courses-col col-sm-12 col-md-12 col-lg-4">
           <div class="card h-100 student_img">
             <img src="images/Photos/one.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -101,7 +101,7 @@
               <button class="courses-btn">Buy Courses</button>
             </div>
 
-            <div class="card-footer d-flex justify-content-between">
+            <div class="card-footer">
               <div class="footer-left d-flex justify-content-start">
                 <img src="images/ICON/calendar.png" alt="">
                 <p>Start 20 April, 2021</p>
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="col courses-col">
+        <div class="col courses-col col-sm-12 col-md-12 col-lg-4">
           <div class="card h-100 student_img">
             <img src="images/Photos/two.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -138,7 +138,7 @@
           </div>
         </div>
 
-        <div class="col courses-col">
+        <div class="col courses-col col-sm-12 col-md-12 col-lg-4">
           <div class="card h-100 student_img">
             <img src="images/Photos/three.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -170,8 +170,8 @@
       <h3 class="text-center">Testimonial</h3>
       <div class="d-flex align-items-center  justify-content-center">
         <img src="images/Photos/Man.png" alt="">
-        <p>There are many variations of passages of Lorem Ipsum available, but the<br>
-        majority have suffered alteration in some form, by injected humour,<br>
+        <p>There are many variations of passages of Lorem Ipsum available, but the
+        majority have suffered alteration in some form, by injected humour,
         or randomised words which don't look even slightly believable.</p>
       </div>
     </div>
@@ -179,12 +179,12 @@
 <!-- ------------------------------------------------------ -->
 
     <div class="container footer-list">
-      <div class="row">
-        <div class="col-5">
+      <div class="row footer-row">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 footer-col">
           <small>Millions of people of all ages and from around<br>
             the world are improving their lives with us</small>>
         </div>
-        <div class="col-2">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 footer-col">
           <p>Courses</p>
           <li><a href="">Design</a></li>
           <li><a href="">Web Design</a></li>
@@ -192,7 +192,7 @@
           <li><a href="">Marketing</a></li>
           <li><a href="">Engineering</a></li>
         </div>
-        <div class="col-2">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 footer-col">
           <p>Terms</p>
           <li><a href="">Design</a></li>
           <li><a href="">Web Design</a></li>
@@ -200,7 +200,7 @@
           <li><a href="">Marketing</a></li>
           <li><a href="">Engineering</a></li>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 footer-col">
           <p>Useful Link</p>
           <li><a href="">Design</a></li>
           <li><a href="">Web Design</a></li>
